--- a/questionnaire.html
+++ b/questionnaire.html
@@ -69,8 +69,7 @@
         <h1>結果分析</h1>
         <p>根據您的作答結果，以下是各項風險評估</p>
       </div>
-
-      <!-- JS 會填入分析內容 -->
+      <div id="resultContent"><!-- JS 會填入這裡 --></div>
     </section>
   </main>
 
