--- a/index.html
+++ b/index.html
@@ -38,27 +38,39 @@
   </div>
 
   <!-- 導覽列 -->
-  <header class="navbar">
-    <div class="logo">
-      <img src="assets/images/logo.png" alt="主 Logo" />
-      <img src="assets/images/logo-02.png" alt="文字 Logo" class="logo-text" />
+<header class="card-nav-container">
+  <nav class="card-nav" id="cardNav">
+    <div class="card-nav-top">
+      <div class="hamburger-menu" id="hamburgerBtn">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+      </div>
+
+      <div class="logo-container">
+        <img src="assets/images/logo.png" alt="主 Logo" class="logo" />
+        <img src="assets/images/logo-02.png" alt="文字 Logo" class="logo-text" />
+      </div>
+
+      <button class="card-nav-cta-button">回到首頁</button>
     </div>
 
-    <button class="navbar-toggle">☰</button>
-
-    <nav id="navMenu">
-      <ul>
-        <li><a href="#hero">首頁</a></li>
-        <li><a href="#intro">專題介紹</a></li>
-        <li><a href="#characters">角色介紹</a></li>
-        <li><a href="#dreams">夢境展示</a></li>
-        <li><a href="#production">製作過程</a></li>
-        <li><a href="#showcase">成果展示</a></li>
-        <li><a href="#team">團隊介紹</a></li>
-        <li><a href="#outlook">回饋</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="card-nav-content">
+      <div class="nav-card" style="background:#f5f5f5; color:#333;">
+        <div class="nav-card-label">導覽選單</div>
+        <div class="nav-card-links">
+          <a href="#hero" class="nav-card-link">首頁</a>
+          <a href="#intro" class="nav-card-link">專題介紹</a>
+          <a href="#characters" class="nav-card-link">角色介紹</a>
+          <a href="#dreams" class="nav-card-link">夢境展示</a>
+          <a href="#production" class="nav-card-link">製作過程</a>
+          <a href="#showcase" class="nav-card-link">成果展示</a>
+          <a href="#team" class="nav-card-link">團隊介紹</a>
+          <a href="#outlook" class="nav-card-link">回饋</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
 
 
   <!-- 首頁封面 -->
@@ -373,6 +385,7 @@
       once: true
     });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
 
 </html>
