--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
   <title>脫癮而出｜專題動畫</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" href="logo.png" type="image/png">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/intro.css" />
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/navbar.css">
+  <link rel="stylesheet" href="css/hero.css">
+  <link rel="stylesheet" href="css/sections.css"> <!-- 專題介紹 / 角色分屏 / 圖片網格 / 橫向滾動 -->
+  <link rel="stylesheet" href="css/cards.css"> <!-- 製作過程 / 圖庫 / 商品 / FAQ / 商品詳情 -->
+  <link rel="stylesheet" href="css/modal.css"> <!-- 詳細面板 / Modal -->
+  <link rel="stylesheet" href="css/quiz.css"> <!-- 問卷 / 進度條 / 結果分析 -->
+  <link rel="stylesheet" href="css/preloader.css"> <!-- 載入畫面 -->
+  <link rel="stylesheet" href="css/intro.css"> <!-- 👈 加在這裡 -->
+  <link rel="stylesheet" href="css/effects.css"> <!-- 星海 / 漸變背景 / glitch / 動畫 keyframes -->
+  <link rel="stylesheet" href="css/responsive.css"> <!-- 全站 RWD 斷點 -->
+  <link rel="stylesheet" href="css/overrides.css"> <!-- 你日後要臨時覆寫的地方 -->
 
   <!-- AOS 動態效果 -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -16,6 +27,9 @@
 
   <!-- Google 字體 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+  <script src="js/nav.js"></script>-
 </head>
 
 <body class="main-site">
@@ -40,66 +54,58 @@
   </div>
 
 
-<!-- 🎬 Intro 開場動畫（圖片版） -->
-<div id="intro" aria-label="Intro Animation" role="dialog" aria-modal="true">
-  <img src="assets/images/logo.png" alt="脫癮而出 Logo" id="introLogoImg" class="intro-logo glitch">
-  <p class="subtitle">Escape the Screen</p>
-  <button id="startBtn" type="button">開始</button>
-  <canvas id="fragmentCanvas"></canvas>
-  <audio id="glitchSound" preload="auto">
-    <source src="assets/sounds/glitch-start.mp3" type="audio/mpeg">
-  </audio>
+  <!-- 🎬 Intro 開場動畫（圖片版） -->
+  <div id="intro" aria-label="Intro Animation" role="dialog" aria-modal="true">
+    <img src="assets/images/logo.png" alt="脫癮而出 Logo" id="introLogoImg" class="intro-logo glitch">
+    <p class="subtitle">Escape the Screen</p>
+    <canvas id="fragmentCanvas"></canvas>
+    <audio id="glitchSound" preload="auto">
+      <source src="assets/sounds/glitch-start.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+<!-- 固定導覽列容器 -->
+<div class="card-nav-container">
+  <nav id="cardNav" class="card-nav" aria-label="主導覽">
+    <div class="card-nav-top">
+      <div id="hamburgerBtn" class="hamburger-menu" aria-expanded="false" aria-controls="card-nav-content">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+      </div>
+
+      <div class="logo-container">
+        <img src="assets/images/logo.png" alt="脫癮而出" class="logo">
+      </div>
+
+      <button type="button" class="card-nav-cta-button">Get Started</button>
+    </div>
+
+    <div id="card-nav-content" class="card-nav-content">
+      <!-- 你的卡片（.nav-card） -->
+      <div class="nav-card" style="background:#0b1020;color:#e6edff;">
+        <div class="nav-card-label">角色介紹</div>
+        <div class="nav-card-links">
+          <a class="nav-card-link" href="#characters">網癮少年</a>
+          <a class="nav-card-link" href="#characters">未來的自己</a>
+        </div>
+      </div>
+      <div class="nav-card" style="background:#101531;color:#e6edff;">
+        <div class="nav-card-label">夢境展示</div>
+        <div class="nav-card-links">
+          <a class="nav-card-link" href="#dreams">遺失時間</a>
+          <a class="nav-card-link" href="#dreams">虛擬幻境</a>
+        </div>
+      </div>
+      <div class="nav-card" style="background:#151b3d;color:#e6edff;">
+        <div class="nav-card-label">團隊介紹</div>
+        <div class="nav-card-links">
+          <a class="nav-card-link" href="#team">成員們</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </div>
 
-  <!-- 導覽列 -->
-  <header class="card-nav-container">
-    <nav class="card-nav" id="cardNav">
-      <div class="card-nav-top">
-        <div class="hamburger-menu" id="hamburgerBtn">
-          <div class="hamburger-line"></div>
-          <div class="hamburger-line"></div>
-        </div>
-
-        <div class="logo-container">
-          <img src="assets/images/logo.png" alt="主 Logo" class="logo" />
-          <img src="assets/images/logo-02.png" alt="文字 Logo" class="logo-text" />
-        </div>
-
-        <button class="card-nav-cta-button">回到首頁</button>
-      </div>
-
-      <div class="card-nav-content">
-        <div class="nav-card" style="background:#f5f5f5; color:#333;">
-          <div class="nav-card-label">導覽選單</div>
-          <div class="nav-card-links">
-            <a href="#hero" class="nav-card-link">首頁</a>
-            <a href="##introSection" class="nav-card-link">專題介紹</a>
-            <a href="#characters" class="nav-card-link">角色介紹</a>
-            <a href="#dreams" class="nav-card-link">夢境展示</a>
-            <a href="#production" class="nav-card-link">製作過程</a>
-            <a href="#showcase" class="nav-card-link">成果展示</a>
-            <a href="#team" class="nav-card-link">團隊介紹</a>
-            <a href="#outlook" class="nav-card-link">回饋</a>
-          </div>
-        </div>
-
-        <div class="nav-card" style="background:#f5f5f5; color:#333;">
-          <div class="nav-card-label">導覽選單</div>
-          <div class="nav-card-links">
-            <a href="#hero" class="nav-card-link">首頁</a>
-            <a href="#introSection" class="nav-card-link">專題介紹</a>
-            <a href="#characters" class="nav-card-link">角色介紹</a>
-            <a href="#dreams" class="nav-card-link">夢境展示</a>
-            <a href="#production" class="nav-card-link">製作過程</a>
-            <a href="#showcase" class="nav-card-link">成果展示</a>
-            <a href="#team" class="nav-card-link">團隊介紹</a>
-            <a href="#outlook" class="nav-card-link">回饋</a>
-          </div>
-        </div>
-      </div>
-
-    </nav>
-  </header>
 
 
   <!-- 首頁封面 -->
@@ -416,6 +422,35 @@
     });
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+  <!-- SVG 濾鏡（可全站共用；放在 body 末端一次即可） -->
+  <svg width="0" height="0" style="position:absolute">
+    <filter id="glitchFilter" x="-20%" y="-20%" width="140%" height="140%">
+      <!-- 產生雜訊 -->
+      <feTurbulence type="fractalNoise" baseFrequency="0.012 0.06" numOctaves="2" seed="8" result="noise">
+        <!-- 透過動畫讓雜訊在時間上變動 -->
+        <animate attributeName="baseFrequency" dur="20s" values="0.012 0.06; 0.02 0.1; 0.012 0.06"
+          repeatCount="indefinite" />
+      </feTurbulence>
+
+      <!-- 擴大雜訊幅度，讓位移更明顯 -->
+      <feDisplacementMap in="SourceGraphic" in2="noise" scale="38" xChannelSelector="R" yChannelSelector="G"
+        result="disp" />
+
+      <!-- 顏色輕微偏移（可關） -->
+      <feColorMatrix in="disp" type="matrix" values="1 0 0 0 0
+              0 1 0 0 0
+              0 0 1 0 0
+              0 0 0 1 0" result="col" />
+
+      <!-- 可選：偶發性「斷層移位」（步進模擬） -->
+      <feTurbulence type="turbulence" baseFrequency="0.8" numOctaves="1" seed="3" result="scan">
+        <animate attributeName="baseFrequency" dur="1.6s" values="0.8;1.2;0.8" repeatCount="indefinite" />
+      </feTurbulence>
+      <feDisplacementMap in="col" in2="scan" scale="4" xChannelSelector="R" yChannelSelector="B" />
+    </filter>
+  </svg>
+
 </body>
 
 </html>
