--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
-  <script src="js/nav.js"></script>-
+  <script src="js/nav.js"></script>
+  <script src="js/starfield.js"></script>
 </head>
 
 <body class="main-site">
-  <canvas id="starfield"></canvas>
+  <canvas id="starfield" aria-hidden="true"></canvas>
 
   <div id="preloader">
     <div class="preloader-content">
@@ -53,11 +54,10 @@
     </div>
   </div>
 
-
   <!-- 🎬 Intro 開場動畫（圖片版） -->
   <div id="intro" aria-label="Intro Animation" role="dialog" aria-modal="true">
     <img src="assets/images/logo.png" alt="脫癮而出 Logo" id="introLogoImg" class="intro-logo glitch">
-    <p class="subtitle">Escape the Screen</p>
+    <p class="subtitle">Click on the picture</p>
     <canvas id="fragmentCanvas"></canvas>
     <audio id="glitchSound" preload="auto">
       <source src="assets/sounds/glitch-start.mp3" type="audio/mpeg">
