--- a/questionnaire.html
+++ b/questionnaire.html
@@ -40,7 +40,7 @@
           請誠實填寫以下問卷，您的資料將被嚴格保密<br>
           問題沒有對錯，結果僅供自我參考
         </h2>
-        <p style="margin-top:8px;">請先輸入您的姓名以開始答題</p>
+        <p style="margin-top:8px;">請先輸入您的姓名(可匿名)以開始答題</p>
       </div>
       <div style="max-width:400px;margin:auto;display:flex;gap:10px;">
         <input type="text" id="username" placeholder="請輸入姓名" required
