--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜專題動畫</title>
-  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/base.css">
@@ -57,7 +56,7 @@
   <!-- 🎬 Intro 開場動畫（圖片版） -->
   <div id="intro" aria-label="Intro Animation" role="dialog" aria-modal="true">
     <img src="assets/images/logo.png" alt="脫癮而出 Logo" id="introLogoImg" class="intro-logo glitch">
-    <p class="subtitle">Click on the picture</p>
+    <p class="subtitle">Click picture</p>
     <canvas id="fragmentCanvas"></canvas>
     <audio id="glitchSound" preload="auto">
       <source src="assets/sounds/glitch-start.mp3" type="audio/mpeg">
@@ -76,8 +75,6 @@
       <div class="logo-container">
         <img src="assets/images/logo.png" alt="脫癮而出" class="logo">
       </div>
-
-      <button type="button" class="card-nav-cta-button">Get Started</button>
     </div>
 
     <div id="card-nav-content" class="card-nav-content">
