--- a/index.html
+++ b/index.html
@@ -103,8 +103,6 @@
   </nav>
 </div>
 
-
-
   <!-- 首頁封面 -->
   <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0213.jpg');">
     <div class="overlay"></div>
@@ -129,8 +127,8 @@
         </p>
 
         <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
-          <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
-        </div>
+          <a href="questionnaire.html" c="btn btn-glow">📝 前往問卷</a>
+        </div>lass
       </div>
 
       <!-- 右側橫向圖片畫廊 -->
@@ -199,9 +197,6 @@
     </div>
   </section>
 
-
-
-
   <!-- 夢境展示 -->
   <section id="dreams" class="section dark-section">
     <h2 class="section-title">夢境展示</h2>
@@ -236,7 +231,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- 製作過程 -->
   <section id="production" class="section dark-section">
@@ -289,27 +283,27 @@
     <h2 class="section-title">團隊介紹</h2>
     <div class="team-grid">
       <div class="member" onclick="showDetail(0,'team')">
-        <img src="assets/images/cb24cf96bf40fb30cd48e4008eb6b0dsda3a.jpg" alt="成員1">
+        <img src="assets/images/196.jpg" alt="成員1">
         <h3>園長</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member" onclick="showDetail(1,'team')">
-        <img src="assets/images/0c68677f46d2fae9df1eeb766391e903yter.jpg" alt="成員2">
+        <img src="assets/images/166.jpg" alt="成員2">
         <h3>雲</h3>
         <p>角色設計 人物線稿 海報設計 動態草圖</p>
       </div>
       <div class="member" onclick="showDetail(2,'team')">
-        <img src="assets/images/cf89dffe11bbd0019919fc7c02d3hfgs2e9e.jpg" alt="成員3">
+        <img src="assets/images/!6.jpg" alt="成員3">
         <h3>org</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member" onclick="showDetail(3,'team')">
-        <img src="assets/images/288e200da732ba5867c98b3da3bddggd754.jpg" alt="成員4">
+        <img src="assets/images/26.jpg" alt="成員4">
         <h3>IBO</h3>
         <p>部分上色 場景線稿 動態草圖</p>
       </div>
       <div class="member" onclick="showDetail(4,'team')">
-        <img src="assets/images/cf3245f7e478be8444179bc4f2gdgsaa5fb6.jpg" alt="成員5">
+        <img src="assets/images/46.jpg" alt="成員5">
         <h3>Miu</h3>
         <p>網頁製作 標準字設計 LOGO設計 剪輯 配音</p>
       </div>
@@ -391,8 +385,6 @@
     <a href="merch.html" class="buy-now-btn">立即前往購買頁面</a>
   </section>
 
-
-
   <!-- Footer -->
   <footer>
     <p>© 2025 脫癮而出專題團隊 | 聯絡：email@example.com</p>
@@ -407,7 +399,6 @@
       once: true
     });
   </script>
-
 
   <!-- SVG 濾鏡（可全站共用；放在 body 末端一次即可） -->
   <svg width="0" height="0" style="position:absolute">
@@ -438,5 +429,4 @@
   </svg>
 
 </body>
-
 </html>
