--- a/index.html
+++ b/index.html
@@ -266,10 +266,24 @@
 
   <!-- 成果展示 -->
   <section id="showcase" class="section">
+    <h2 data-aos="fade-up">作品介紹
+    </h2>
+
+    <div class="video-container" data-aos="fade-up" data-aos-delay="200">
+      <iframe src="https://www.youtube.com/embed/BLpTt9TXfv0?si=Qv0NhdE2gwHQFbsW" frameborder="0" allowfullscreen>
+      </iframe>
+    </div>
+
+    <p style="text-align:center; margin-top:20px;" data-aos="fade-up">
+      🎥 簡短的作品介紹和製作的過程，詳情請前往網頁查看。
+    </p>
+  </section>
+
+  <section id="showcase" class="section">
     <h2 data-aos="fade-up">成果展示</h2>
 
     <div class="video-container" data-aos="fade-up" data-aos-delay="200">
-      <iframe src="https://www.youtube.com/embed/dHXs3RVlEv0" frameborder="0" allowfullscreen>
+      <iframe src="https://www.youtube.com/embed/yTsYs2Zpxrk?si=gwPI0pcFbQyeAjts" frameborder="0" allowfullscreen>
       </iframe>
     </div>
 
@@ -346,7 +360,7 @@
     </p>
     <div class="gallery" data-aos="fade-up" data-aos-delay="300">
       <img src="assets/images/sketch.jpg" alt="分鏡草稿">
-      <iframe src="https://www.youtube.com/embed/CuVHFfMx5Ns" frameborder="0" allowfullscreen>
+      <iframe src="https://www.youtube.com/embed/yTsYs2Zpxrk?si=nzg7XhTFAez8BnYa" frameborder="0" allowfullscreen>
       </iframe>
       <img src="assets/images/teamwork.jpg" alt="團隊合作">
     </div>
