--- a/index.html
+++ b/index.html
@@ -63,45 +63,45 @@
     </audio>
   </div>
 
-<!-- 固定導覽列容器 -->
-<div class="card-nav-container">
-  <nav id="cardNav" class="card-nav" aria-label="主導覽">
-    <div class="card-nav-top">
-      <div id="hamburgerBtn" class="hamburger-menu" aria-expanded="false" aria-controls="card-nav-content">
-        <div class="hamburger-line"></div>
-        <div class="hamburger-line"></div>
+  <!-- 固定導覽列容器 -->
+  <div class="card-nav-container">
+    <nav id="cardNav" class="card-nav" aria-label="主導覽">
+      <div class="card-nav-top">
+        <div id="hamburgerBtn" class="hamburger-menu" aria-expanded="false" aria-controls="card-nav-content">
+          <div class="hamburger-line"></div>
+          <div class="hamburger-line"></div>
+        </div>
+
+        <div class="logo-container">
+          <img src="assets/images/logo.png" alt="脫癮而出" class="logo">
+        </div>
       </div>
 
-      <div class="logo-container">
-        <img src="assets/images/logo.png" alt="脫癮而出" class="logo">
-      </div>
-    </div>
-
-    <div id="card-nav-content" class="card-nav-content">
-      <!-- 你的卡片（.nav-card） -->
-      <div class="nav-card" style="background:#0b1020;color:#e6edff;">
-        <div class="nav-card-label">角色介紹</div>
-        <div class="nav-card-links">
-          <a class="nav-card-link" href="#characters">網癮少年</a>
-          <a class="nav-card-link" href="#characters">未來的自己</a>
+      <div id="card-nav-content" class="card-nav-content">
+        <!-- 你的卡片（.nav-card） -->
+        <div class="nav-card" style="background:#0b1020;color:#e6edff;">
+          <div class="nav-card-label">角色介紹</div>
+          <div class="nav-card-links">
+            <a class="nav-card-link" href="#characters">網癮少年</a>
+            <a class="nav-card-link" href="#characters">未來的自己</a>
+          </div>
+        </div>
+        <div class="nav-card" style="background:#101531;color:#e6edff;">
+          <div class="nav-card-label">夢境展示</div>
+          <div class="nav-card-links">
+            <a class="nav-card-link" href="#dreams">遺失時間</a>
+            <a class="nav-card-link" href="#dreams">虛擬幻境</a>
+          </div>
+        </div>
+        <div class="nav-card" style="background:#151b3d;color:#e6edff;">
+          <div class="nav-card-label">團隊介紹</div>
+          <div class="nav-card-links">
+            <a class="nav-card-link" href="#team">成員們</a>
+          </div>
         </div>
       </div>
-      <div class="nav-card" style="background:#101531;color:#e6edff;">
-        <div class="nav-card-label">夢境展示</div>
-        <div class="nav-card-links">
-          <a class="nav-card-link" href="#dreams">遺失時間</a>
-          <a class="nav-card-link" href="#dreams">虛擬幻境</a>
-        </div>
-      </div>
-      <div class="nav-card" style="background:#151b3d;color:#e6edff;">
-        <div class="nav-card-label">團隊介紹</div>
-        <div class="nav-card-links">
-          <a class="nav-card-link" href="#team">成員們</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-</div>
+    </nav>
+  </div>
 
   <!-- 首頁封面 -->
   <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0213.jpg');">
@@ -127,8 +127,8 @@
         </p>
 
         <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
-          <a href="questionnaire.html" c="btn btn-glow">📝 前往問卷</a>
-        </div>lass
+          <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
+        </div>
       </div>
 
       <!-- 右側橫向圖片畫廊 -->
@@ -351,7 +351,7 @@
     </form>
   </section>
 
-  <!-- 幕後花絮 -->
+  <!-- 幕後花絮 --
   <section id="behind" class="section">
     <h2 data-aos="fade-up">幕後花絮</h2>
     <p data-aos="fade-up" data-aos-delay="200" style="text-align:center; max-width:800px; margin:0 auto 40px;">
@@ -366,27 +366,27 @@
     </div>
   </section>
 
-  <!-- 周邊 -->
+  <!-- 周邊 --
   <section id="merchandise" class="section bg-light">
     <h2 data-aos="fade-up">周邊展示與購買</h2>
     <p class="section-description">支持我們的創作，購買限量周邊商品！</p>
 
     <div class="merch-cards">
-      <!-- 商品 1 -->
+      <!-- 商品 1 --
       <div class="merch-card" data-aos="fade-up" data-aos-delay="100">
         <img src="assets/images/merch-shirt.jpg" alt="主題拍立得">
         <h3>主題拍立得｜脫癮而出</h3>
         <p>簡約設計，象徵重生與自我對話。</p>
       </div>
 
-      <!-- 商品 2 -->
+      <!-- 商品 2 --
       <div class="merch-card" data-aos="fade-up" data-aos-delay="200">
         <img src="assets/images/merch-book.jpg" alt="海報拼圖">
         <h3>海報拼圖</h3>
         <p>超讚的拼圖，讓你在遊戲中重溫經典場景。</p>
       </div>
 
-      <!-- 商品 3 -->
+      <!-- 商品 3 --
       <div class="merch-card" data-aos="fade-up" data-aos-delay="300">
         <img src="assets/images/merch-sticker.jpg" alt="角色貼紙組">
         <h3>角色貼紙組</h3>
@@ -396,7 +396,7 @@
 
     <h2>支持我們的創作</h2>
     <p>點擊下方按鈕前往購買周邊商品</p>
-    <a href="merch.html" class="buy-now-btn">立即前往購買頁面</a>
+    <a href="merch.html" class="buy-now-btn">立即前往購買頁面</a> -->
   </section>
 
   <!-- Footer -->
@@ -443,4 +443,5 @@
   </svg>
 
 </body>
+
 </html>
