--- a/questionnaire.html
+++ b/questionnaire.html
@@ -15,9 +15,12 @@
   <link rel="stylesheet" href="css/effects.css">    <!-- 若不需要動態背景可移除 -->
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/overrides.css">
+
+  <script src="js/starfield.js"></script>
 </head>
 
 <body class="questionnaire-site">
+  <canvas id="starfield" aria-hidden="true"></canvas>
   <!-- 🌀 Preloader（與主站一致；這頁不需要 Intro 動畫） -->
   <div id="preloader">
     <div class="preloader-content">
