--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <!-- 製作過程 -->
   <section id="production" class="section dark-section wide-section">
     <h2 class="section-title">製作過程</h2>
-    <div class="cards">
+    <div class="cards production-cards">
       <div class="card">
         <h3>角色設計</h3>
         <img src="assets/images/IMG_0175.png" alt="分鏡">
@@ -296,30 +296,30 @@
   <section id="team" class="section dark-section wide-section">
     <h2 class="section-title">團隊介紹</h2>
     <div class="team-grid">
-      <div class="member" onclick="showDetail(0,'team')">
+      <div class="member lead" onclick="showDetail(0,'team')">
         <img src="assets/images/196.jpg" alt="成員1">
-        <h3>園長</h3>
+        <h3>鄭羽媗 組長</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member" onclick="showDetail(1,'team')">
         <img src="assets/images/166.jpg" alt="成員2">
-        <h3>雲</h3>
+        <h3>詹昀蓁</h3>
         <p>角色設計 人物線稿 海報設計 動態草圖</p>
       </div>
       <div class="member" onclick="showDetail(2,'team')">
         <img src="assets/images/!6.jpg" alt="成員3">
-        <h3>org</h3>
+        <h3>王冠程</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member" onclick="showDetail(3,'team')">
         <img src="assets/images/26.jpg" alt="成員4">
-        <h3>IBO</h3>
+        <h3>何濬希</h3>
         <p>部分上色 場景線稿 動態草圖</p>
       </div>
       <div class="member" onclick="showDetail(4,'team')">
         <img src="assets/images/46.jpg" alt="成員5">
-        <h3>Miu</h3>
-        <p>網頁製作 標準字設計 LOGO設計 剪輯 配音</p>
+        <h3>陳立約</h3>
+        <p>網頁製作 標準字設計 LOGO設計 剪輯</p>
       </div>
     </div>
   </section>
